# NativeSpringServer

./: .gitignore  ARCHITECTURE.md  README.md
App/: tasks.py
App/backend/: README.md  pom.xml  tasks.py
App/backend/src/main/java/com/example/backend/: AddController.java  BackendSmokeApplication.java  FoundationDocsNativeLoader.java  FoundationMathNativeLoader.java
App/foundation/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  tasks.py
App/foundation/include/: foundation_docs.hpp  foundation_math.hpp
App/foundation/src/: foundation_docs.cpp  foundation_math.cpp  main.cpp
App/foundation/swig/: foundation_docs.i  foundation_math.i
Config/: maven-settings-template.xml  project-config-template.json
Script/: generate_maven_settings.sh  generate_vscode_config.sh
Tools/: __init__.py  invoke_support.py  project_config.py
